[gd_scene load_steps=8 format=3 uid="uid://dh0n7nkjo625o"]

[ext_resource type="Script" path="res://Scenes and Scripts/enemy.gd" id="1_mlcn8"]
[ext_resource type="Texture2D" uid="uid://oypiwe7s2wub" path="res://Assets/Enemy/treestump.png" id="2_fa50r"]
[ext_resource type="Texture2D" uid="uid://tun15fpyhva8" path="res://Assets/Enemy/frog_front.png" id="3_0u275"]
[ext_resource type="Texture2D" uid="uid://dnpfe0wygxwrl" path="res://Assets/Enemy/frog_left.png" id="4_t6ac5"]
[ext_resource type="Texture2D" uid="uid://082vdnhyhp6q" path="res://Assets/Enemy/frog_back.png" id="5_ajqg8"]
[ext_resource type="Texture2D" uid="uid://bno8afjad1nwl" path="res://Assets/Enemy/frog_right.png" id="6_p07ph"]

[sub_resource type="SpriteFrames" id="SpriteFrames_xdefc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_0u275")
}, {
"duration": 1.0,
"texture": ExtResource("4_t6ac5")
}, {
"duration": 1.0,
"texture": ExtResource("5_ajqg8")
}, {
"duration": 1.0,
"texture": ExtResource("6_p07ph")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Enemy" type="Node2D"]
z_index = 1
y_sort_enabled = true
script = ExtResource("1_mlcn8")
min_time = 10.0
max_time = 20.0

[node name="Sprite2D" type="Sprite2D" parent="."]
light_mask = 129
visibility_layer = 129
position = Vector2(2, -115)
scale = Vector2(0.836364, 0.836364)
texture = ExtResource("2_fa50r")
offset = Vector2(0, 149.315)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-3, -58)
scale = Vector2(0.808333, 0.808333)
sprite_frames = SubResource("SpriteFrames_xdefc")
frame_progress = 0.1206
offset = Vector2(0, -31.12)

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Ambience" type="AudioStreamPlayer2D" parent="."]
max_distance = 1500.0
attenuation = 1.36604
bus = &"SFX"

[node name="AmbienceTimer" type="Timer" parent="."]
autostart = true

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 290)
collision_mask = 6

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="AmbienceTimer" to="." method="_on_ambience_timer_timeout"]
